<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="180dp">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="15dp"
        android:text="@string/locationAlert1"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_gps"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/locationAlert2"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_google"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="337dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="82dp"
        android:text="@string/locationAlert3"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="293dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/locationAlert4"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="382dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="25dp"
        android:text="@string/locationAlert5"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.06999999" />

    <!--<TextView-->
        <!--android:id="@+id/OK"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="32dp"-->
        <!--android:text="OK"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="18sp"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/NO"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/NO" />-->

    <!--<TextView-->
        <!--android:id="@+id/NO"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="21dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="NO THANKS"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="18sp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/OK"-->
        <!--app:layout_constraintHorizontal_bias="0.86"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView1"-->
        <!--app:layout_constraintVertical_bias="0.0" />-->
</android.support.constraint.ConstraintLayout>
