<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageButton
        android:layout_width="19dp"
        android:layout_height="25dp"
        android:background="@drawable/backward"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/logoblue" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:fontFamily="@font/montserrat"
            android:text="TuTrack"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:text="Firebase User ID: 123456789abc" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="Choose an account"
        android:fontFamily="@font/montserrat"
        android:padding="20dp"
        />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        />
    <com.facebook.login.widget.LoginButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        app:srcCompat="@drawable/login_with_facebook"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        >



        <LinearLayout
            android:id="@+id/signOutAndDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="invisible"
            tools:visibility="invisible">

            <Button
                android:id="@+id/signOutButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                ></Button>
            <Button
                android:id="@+id/disconnectButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnect"
                ></Button>


        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:baselineAlignBottom="true"
        android:src="@drawable/backblue" />

</LinearLayout>
